--- a/src/styles/scheduler.scss
+++ b/src/styles/scheduler.scss
@@ -1,38 +1,3 @@
-.meeting-schedule-dialog {
-  &.loading {
-    .ant-drawer-body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 16px;
-      height: 100%;
-    }
-  }
-  .ant-drawer-header {
-    height: 58px;
-    .schedule-meeting-header {
-      background-color: var(--dsw-metting-background-color);
-      text-align: center;
-      text-align: center;
-      > h3 {
-        font-weight: normal;
-        margin-bottom: 0;
-        font-weight: 400;
-        font-size: 16px;
-      }
-
-      > svg {
-        cursor: pointer;
-        -webkit-app-region: no-drag;
-      }
-    }
-  }
-
-  .ant-drawer-body {
-    padding: 0;
-  }
-}
-
 .view-schedule-header {
   display: flex;
   justify-content: center;
@@ -105,13 +70,46 @@
 .meeting-schedule-dialog {
   box-shadow: var(--dsw-elevation-02);
   //box-shadow: 2px 2px 4px var(--dsw-box-shadow-color);
-  background-color: var(--dsw-metting-background-color);
+  background-color: var(--dsw-metting-background-color) !important;
   color: var(--dsw-color-text-primary);
   padding-bottom: 88px;
   overflow-y: scroll;
   &::-webkit-scrollbar {
     display: none;
     width: 0px;
+  }
+
+  &.loading {
+    .ant-drawer-body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 16px;
+      height: 100%;
+    }
+  }
+  .ant-drawer-header {
+    height: 58px;
+    .schedule-meeting-header {
+      background-color: var(--dsw-metting-background-color);
+      text-align: center;
+      text-align: center;
+      > h3 {
+        font-weight: normal;
+        margin-bottom: 0;
+        font-weight: 400;
+        font-size: 16px;
+      }
+
+      > svg {
+        cursor: pointer;
+        -webkit-app-region: no-drag;
+      }
+    }
+  }
+
+  .ant-drawer-body {
+    padding: 0;
   }
 
   .meeting-main {
@@ -128,25 +126,27 @@
       padding-left: 4px;
     }
 
-    &.hasTooltip {
-      padding-top: 88px;
-      .google-tooltip {
-        position: fixed;
-        top: 58px;
-        right: 0;
-        font-size: 10px;
-        width: 360px;
-        height: 22px;
-        z-index: 100;
-        color: var(--dsw-color-icon);
-        background-color: var(--dsw-color-bg-3);
-        line-height: 22px;
-        svg {
-          width: 12px;
-          height: 12px;
-          cursor: pointer;
-        }
+    .google-tooltip {
+      position: fixed;
+      top: 57px;
+      right: 0;
+      font-size: 10px;
+      width: 360px;
+      height: 22px;
+      z-index: 100;
+      color: var(--dsw-color-icon);
+      background-color: var(--dsw-color-bg-3);
+      line-height: 22px;
+      cursor: pointer;
+      svg {
+        width: 12px;
+        height: 12px;
+        cursor: pointer;
       }
+    }
+
+    &:has(.google-tooltip) {
+      padding-top: 28px;
     }
 
     .hideScrollbar {
