--- a/src/styles/scheduler.scss
+++ b/src/styles/scheduler.scss
@@ -110,6 +110,7 @@
 
   .ant-drawer-body {
     padding: 0;
+    height: 100%;
   }
 
   .meeting-main {
@@ -279,27 +280,6 @@
         }
       }
 
-      .user-list {
-        width: 100%;
-        // padding: 16px 0;
-        border-radius: 8px;
-        border: 1px solid var(--dsw-color-line);
-        margin: 8px 0;
-        overflow: hidden;
-
-        .item-hover-close {
-          width: 16px;
-          height: 16px;
-          display: none;
-          margin-left: auto;
-          margin-right: 10px;
-        }
-
-        &-noborder {
-          border: none;
-        }
-      }
-
       .schedule-meeting-file-item {
         display: flex;
         justify-content: flex-start;
@@ -463,37 +443,6 @@
       border-radius: 8px;
     }
   }
-
-  .memeber-change-tip {
-    padding: 16px;
-    color: var(--dsw-color-text-primary);
-    background-color: var(--dsw-color-bg-2);
-    font-size: 14px;
-    line-height: 20px;
-
-    > .second {
-      display: flex;
-      align-items: center;
-    }
-  }
-
-  .group-tip {
-    display: flex;
-    align-items: center;
-    margin: 16px;
-    margin-bottom: 0;
-    font-size: 14px;
-
-    > span {
-      display: block;
-    }
-
-    > .ellipsis {
-      @include ellipsis();
-      color: var(--dsw-color-text-secondary);
-      min-width: 0;
-    }
-  }
 }
 
 .preview-item {
@@ -533,6 +482,180 @@
     input {
       text-align: center;
       height: 26px;
+    }
+  }
+}
+
+.module-contact-list-item {
+  padding: 10px 0px 10px 18px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  color: $color-gray-60;
+}
+
+.module-contact-list-item-rapid {
+  padding-right: 20px;
+}
+
+.module-contact-list-item:hover {
+  background-color: var(--dsw-color-bg-3);
+  // border-radius: 8px;
+  .item-hover-close {
+    display: block !important;
+  }
+}
+
+.module-contact-list-item-no-hover:hover {
+  background-color: inherit !important;
+}
+
+.module-contact-list-item--with-click-handler {
+  cursor: pointer;
+}
+
+.module-contact-list-item__text {
+  margin-left: 12px;
+}
+
+.module-contact-list-item-create-group__text {
+  overflow: hidden;
+}
+
+.module-contact-list-item__text__header {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+  align-items: center;
+}
+
+.module-contact-list-item__text__name {
+  font-weight: 400;
+  font-size: 14px;
+  color: #17191d;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  flex-grow: 0;
+  flex-shrink: 1;
+  line-height: 22px;
+  overflow-x: hidden;
+}
+.module-contact-list-item__text__name__standard {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  // display: flex;
+  align-items: center;
+  color: var(--dsw-color-text-primary);
+}
+
+.module-contact-list-item__text__additional-data {
+  margin-bottom: 3px;
+  font-size: 12px;
+  color: #aeaeae;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  .additional-data-text-with-utc {
+    display: flex;
+    align-items: center;
+    .additional-data-text {
+      flex: 1;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      margin-right: 8px;
+    }
+
+    .additional-data-utc-text {
+      flex-shrink: 0;
+      flex-grow: 0;
+      flex-basis: auto;
+      text-align: right;
+      white-space: nowrap;
+      margin-left: auto;
+    }
+  }
+
+  &-noData {
+    margin-bottom: 0px;
+  }
+}
+
+.module-contact-list-item__input {
+  margin-right: 10px;
+  pointer-events: none;
+}
+
+.user-list-drawer {
+  .ant-drawer-header {
+    background-color: var(--dsw-color-bg-1);
+    .user-list-title {
+      > svg {
+        cursor: pointer;
+        width: 20px;
+        height: 20px;
+        -webkit-app-region: no-drag;
+      }
+    }
+  }
+  .ant-drawer-body {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    background-color: var(--dsw-color-bg-1);
+
+    .memeber-change-tip {
+      padding: 16px;
+      color: var(--dsw-color-text-primary);
+      background-color: var(--dsw-color-bg-2);
+      font-size: 14px;
+      line-height: 20px;
+
+      > .second {
+        display: flex;
+        align-items: center;
+      }
+    }
+
+    .group-tip {
+      display: flex;
+      align-items: center;
+      margin: 16px;
+      margin-bottom: 0;
+      font-size: 14px;
+      > span {
+        display: block;
+      }
+
+      > .ellipsis {
+        @include ellipsis();
+        color: var(--dsw-color-text-secondary);
+        min-width: 0;
+      }
+    }
+
+    .user-list {
+      width: 100%;
+      border-radius: 8px;
+      margin: 8px 0;
+      overflow: hidden;
+
+      .item-hover-close {
+        width: 16px;
+        height: 16px;
+        display: none;
+        margin-left: auto;
+        margin-right: 10px;
+      }
     }
   }
 }
