[chore] add share modal

--- a/src/styles/scheduler.scss
+++ b/src/styles/scheduler.scss
@@ -173,6 +173,8 @@
   .live-icon {
     background: linear-gradient(90deg, #f84135, #fe7566);
     border-radius: 2px;
+    width: 28px;
+    height: 16px;
   }
 }
 
