[chore] fix find time

--- a/src/styles/scheduler.scss
+++ b/src/styles/scheduler.scss
@@ -7,6 +7,10 @@
   gap: 8px;
   margin: 0 40px;
 
+  > button {
+    -webkit-app-region: no-drag;
+  }
+
   [role='img'] {
     width: 12px;
     height: 12px;
